# amtrak-api

./: Cargo.toml  LICENSE  README.md  amtrak-api.code-workspace
.github/workflows/: ci.yml
examples/: filter_stations.rs  filter_trains.rs  single_station.rs  single_train.rs
src/: client.rs  errors.rs  lib.rs  responses.rs
tests/: station.rs  train.rs
