[package]
name = "amtrak-api"
version = "0.0.1"
edition = "2021"
description = "Amtrak Async Rust API Client"
keywords = ["amtrak", "api", "public-transit", "train"]
readme = "README.md"
repository = "https://github.com/StefanBossbaly/amtrak-api/"
authors = ["Stefan Bossbaly <sbossb@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
serde_json = "1.0.105"
serde = { version = "1.0.186", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1.1.0"
tokio = { version = "1.32.0", features = ["full"] }

[[example]]
name = "filter_stations"
crate-type = ["bin"]

[[example]]
name = "filter_trains"
crate-type = ["bin"]

[[example]]
name = "single_station"
crate-type = ["bin"]

[[example]]
name = "single_train"
crate-type = ["bin"]